--- a/index.html
+++ b/index.html
@@ -9,38 +9,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-   integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <style>
-    .note{ 
-       padding:10px;
-       margin:10px;
+    /* .note {
+        padding: 10px;
+        margin: 10px;
         width: 200px;
         height: 200px;
         border-radius: 5px;
         border-color: black;
-        background-color:rgb(123, 153, 218);
-    }
-    .hidden{
-        display:none;
+        background-color: rgb(123, 153, 218);
+    } */
+
+    .hidden {
+        display: none;
     }
 </style>
-<body>
-    <div class="container-fluid">
-    <nav class="navbar navbar-light bg-primary">
-        <div class="container-fluid">
-            <div class="heading">
-                <h1><i class=" fas fa-sticky-note"></i>keep clone<button class="learn-more btn btn-primary" class="add" id="add" style="margin-left:100px ;">Add note</button></h1>
-                
+
+<body style="background-color: rgb(216, 208, 161);margin-top: 68px;">
+
+          <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><i class="fas fa-tasks"></i>Note Taker</a> 
+              <div class="collapse navbar-collapse justify-content-end d-flex" id="navbarCollapse">
+                <ul class="nav position-right me-auto mb-2 mb-md-0">
+                  <li class="nav-item position-absolute top-0 end-0">
+                    <button class="btn btn-outline-danger" class="add" id="add" style="margin-top:10px">Add Note</button>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </div> 
-           <div class="btn-div">
-        
-    </div>
-    </nav>
+          </nav>
 
-
-    <!-- we are adding this btn using javascript -->
+        <!-- we are adding this btn using javascript -->
         <!-- <div class="note">
             <div class="operation">
                 <button class="edit btn btn-danger" id="edit"><i class="fas fa-edit"></i></button>
@@ -49,10 +51,9 @@
             <div class="main"></div>
             <textarea name="" ></textarea>
         </div> -->
- 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
         <script src="script.js"></script>
     </div>
 </body>
